# ai-certification-challenge

./: .gitignore  ACTIVITIES.md  README.md  challenge.ipynb  debug_retrieval.py  env.yaml.example  errors.txt  install_ragas.py  pyproject.toml  test_helpfulness_agent.py  test_helpfulness_integrated.py  test_helpfulness_simple.py
api/: app.py  requirements.txt
api/evaluator/: ragas_evaluation_results.json
api/features/agents/: README.md  README_HELPFUL_AGENT.md  agent_endpoints.py  config.py  helpful_evaluator_agent.py  pub_med_agent.py  test_agent.py  test_enhanced_agent.py  test_helpful_agent.py
api/features/evaluator/: crossfit_synthetic_dataset.csv  ragas_eval.py
api/features/observability/: langsmith_config.py
api/features/processors/: document_processor.py  local_document_manager.py
api/features/rag/: enhanced_rag.py  rag.py  rag.py.bak
api/features/store/: vector_store.py  vectordatabase.py
api/utils/: env_loader.py
docs/: README.md  component-architecture.md  langgraph-workflow.md  llm-app-stack.md  package-diagram.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/list-pdfs/: route.ts
frontend/app/api/rag-query/: route.ts
frontend/app/components/: ChatInput.tsx  ChatMessage.tsx  ConversationManager.tsx  HelpModal.tsx  PDFDropdown.tsx  PDFListBox.tsx  PDFSelector.tsx  PDFUploader.tsx  RAGSources.tsx  SettingsPanel.tsx  TrainerSelector.tsx  TypingIndicator.tsx
frontend/app/utils/: errorHandling.ts
(+5 files in other folders)
