[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "langchain>=0.3.14",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.2.61",
    "ragas==0.2.10",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0",
    "qdrant-client>=1.7.0",
    "pymupdf>=1.24.0",
    "jupyter>=1.1.1",
    "rapidfuzz>=3.0.0",
    "pypdf2>=3.0.1",
    "biopython>=1.85",
    "faiss-cpu>=1.11.0.post1",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.0",
    "python-multipart>=0.0.6",
    "langsmith>=0.1.0",
]

[tool.setuptools]
packages = ["api"]
